# duckdb-demo

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
.claude/skills/duckdb-learning/: SKILL.md
docs/rationale/: 0001_foundations.md  0002_core_sql.md  0003_intermediate_sql.md  0004_data_io_export.md  0005_python_interop.md  0006_advanced_sql.md  0007_visualization.md  0008_real_world_patterns.md
examples/: 01_quick_start.py  02_excel_to_duckdb.py  03_read_parquet.py  04_read_json.py  05_create_and_insert.py  11_quick_start.py  12_excel_to_duckdb.py  13_read_parquet.py  14_read_json.py  15_create_and_insert.py  21_filter_and_sort.py  22_aggregations.py  23_joins.py  24_subqueries_ctes.py  25_case_expressions.py  26_set_operations.py  31_window_ranking.py  32_window_aggregates.py  33_dates_and_times.py  34_strings_and_regex.py  35_pivot_unpivot.py  36_friendly_sql.py  41_export_formats.py  42_multi_file_glob.py  43_hive_partitioning.py  44_http_remote.py  45_attach_databases.py  51_pandas_interop.py  52_polars_interop.py  53_pyarrow_interop.py  54_relational_api.py  55_python_udfs.py  61_nested_types.py  62_json_processing.py  63_recursive_ctes.py  64_asof_joins.py  65_grouping_sets.py  66_full_text_search.py  71_matplotlib_charts.py  72_plotly_charts.py  (+7 more)
src/duckdb_demo/: __init__.py  __main__.py  main.py  queries.py
src/duckdb_demo/data/: inventory.xlsx  products.jsonl  sales.csv  sales.parquet
