[project]
name = "duckdb-demo"
version = "0.1.0"
description = "Hands-on DuckDB + Python demo for novice AI/BI developers"
readme = "README.md"
authors = [
    { name = "Chris Ha", email = "chris.ha@americannational.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

# -- Ruff (linter + formatter) ------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# -- ty (type checker) --------------------------------------------------------
[tool.ty.environment]
python-version = "3.10"
